# nu_plugin_browse

./: Cargo.toml  LICENSE  README.md
src/: main.rs
