[package]
name = "nu_plugin_browse"
repository = "https://github.com/Tyarel8/nu_plugin_browse"
description = "A nushell plugin to make http requests with a headless browser"
license = "MIT"
version = "0.4.0"
edition = "2024"

[dependencies]
chromiumoxide = "0.9.1"
futures = "0.3.32"
nu-plugin = "0.111.0"
nu-protocol = "0.111.0"
tokio = { version = "1.49.0", features = ["full"] }
