[package]
name = "nu_plugin_browse"
repository = "https://github.com/Tyarel8/nu_plugin_browse"
description = "A nushell plugin to make http requests with a headless browser"
license = "MIT"
version = "0.5.0"
edition = "2024"

[dependencies]
chromiumoxide = "0.9.1"
futures = "0.3.32"
nu-plugin = "0.112.1"
nu-protocol = "0.112.1"
tokio = { version = "1.51.1", features = ["full"] }
